<resources>
    <string name="app_name">CoGuard</string>
    <string name="what_s_on_your_mind">İletinizi Giriniz</string>
    <string name="menu_refresh">Yenile</string>
    <string name="gotoSource">Kaynağa Git</string>

    <string name="emoji">Senin için &#128522;</string>
    <string name="opened">Menü Açık</string>

    <string name="closed">Menü Kapalı</string>
    <string name="action_settings">Settings</string>
    <string name="anladim">Anladım &#128522;</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="header">Bizim için değerlisin &#128525;</string>
    <string name="text1">Beta sürümünden selamlar bana birşeyler öğretmesi için aileme yardım ettiğin için çok teşekkür ederim.</string>
    <string name="text2">Eğer projenin geliştirilmesinde katkı sağlayan sağlık çalışanlarından birisiysen seni çok seviyoruz &#128536;</string>
    <string name="text3">beta programından ayrılıkren tekrar burada olacağım ve aileme geri bildirimlerini iletmen için sana yardım edeceğim &#128522;</string>
    <string name="text4">görüşmek üzere buralarda olacağım &#128519;</string>
    <string name="btn_tmm">Tamamdır &#129305;</string>
    <string name="info1">Şimdi beni daha iyi geliştirebilmesi için aileme bir geri bildirim bırakmanı rica edeceğim &#129488;</string>
    <string name="info2">örnek metni aşağıya bıraktım bana mail adresini bırakmak istersen ebeveynlerim sana geri dönüş yapabilirler &#128523;</string>
    <string name="info3">şimdi seni dinliyorum &#129488;</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
