<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/color"
                android:gravity="center"
                android:padding="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="Geldiiim &#128525;"
                android:textSize="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bacgroundd"/>



            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="-70dp"
                android:src="@drawable/doctor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:background="@drawable/bg_bubble_watbot"
                    android:text="@string/info1"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:background="@drawable/bg_bubble_watbot"
                android:text="@string/info2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:background="@drawable/bg_bubble_watbot"
                android:text="@string/info3"
                />


            <EditText
                android:id="@+id/feed"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="Merhaba ben Ali, uygulamanızın blabla kısımlarını beğendim fakat blabla kısımlarını düzeltmenizi öneriririm, ayrıca uygulamaya blabla özellirklerini eklemenizi tavsiye ederim \n  ali@gmail.com"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                />



            <Button
                android:id="@+id/anladim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:text="Postala &#12823;" />


            </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>